@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* Logging categories (check out command-line options "--verbose=" and "--trace=")
 * C-GET SCP: Fix responses and handling of cancel
 * Fix decoding sequence if "BuiltinDecoderTranscoderOrder" is "Before"
 * REST API returns 404 error if deleting an inexistent peer or modality
